[gd_scene load_steps=14 format=3 uid="uid://b8tc7q5tq6x8m"]

[ext_resource type="Script" path="res://scripts/player/PlayerScene.gd" id="1_63dc3"]
[ext_resource type="PackedScene" uid="uid://ctfwa14d6xy7i" path="res://scenes/weapons/WeaponPistol.tscn" id="2_c2ur0"]
[ext_resource type="PackedScene" uid="uid://lidxun3v1u3h" path="res://scenes/game_ui/GameOverScene.tscn" id="2_n2ncv"]
[ext_resource type="PackedScene" uid="uid://8rjjgn7r2g22" path="res://scenes/game_ui/GamePauseScene.tscn" id="2_s8mh6"]
[ext_resource type="PackedScene" uid="uid://bn435v4lwui4" path="res://scenes/weapons/WeaponRifle.tscn" id="3_efmxo"]
[ext_resource type="PackedScene" uid="uid://cpoy7p032mikq" path="res://scenes/game_ui/GameWonScene.tscn" id="3_ilfnc"]
[ext_resource type="PackedScene" uid="uid://cqgnadmcwfo0s" path="res://scenes/weapons/WeaponShotgun.tscn" id="4_qoxg4"]
[ext_resource type="PackedScene" uid="uid://chcrw3v3d3h4v" path="res://scenes/weapons/WeaponMachineGun.tscn" id="5_b2er2"]
[ext_resource type="Texture2D" uid="uid://d2yn1ctpvuua8" path="res://assets/sprites/game_textures/spr_crosshair.png" id="6_1n2bp"]
[ext_resource type="PackedScene" uid="uid://c6tfxjew4tatn" path="res://scenes/weapons/WeaponMinigun.tscn" id="6_ivwdk"]
[ext_resource type="PackedScene" uid="uid://uqsnfk54cjss" path="res://scenes/game_ui/PlayerTooltip.tscn" id="6_km5q6"]
[ext_resource type="Theme" uid="uid://r386d6tfbxnc" path="res://themes/ButtonTheme.tres" id="12_plvxg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_votpe"]

[node name="PlayerScene" type="CharacterBody3D"]
script = ExtResource("1_63dc3")

[node name="PlayerHead" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="PlayerHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64966, 0)

[node name="RayCast3D" type="RayCast3D" parent="PlayerHead/Camera"]
visible = false
target_position = Vector3(0, 0, -3)

[node name="ShootingCast" type="RayCast3D" parent="PlayerHead/Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -80, 0)

[node name="PlayerHands" type="Node3D" parent="PlayerHead/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.16, -0.19966, -0.14)

[node name="WeaponPistol" parent="PlayerHead/Camera/PlayerHands" instance=ExtResource("2_c2ur0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, -0.025, 0)

[node name="WeaponRifle" parent="PlayerHead/Camera/PlayerHands" instance=ExtResource("3_efmxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, -0.055, 0.39)
visible = false

[node name="WeaponShotgun" parent="PlayerHead/Camera/PlayerHands" instance=ExtResource("4_qoxg4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.035, -0.07, 0.35)
visible = false

[node name="WeaponMachineGun" parent="PlayerHead/Camera/PlayerHands" instance=ExtResource("5_b2er2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.07, 0.485)
visible = false

[node name="WeaponMinigun" parent="PlayerHead/Camera/PlayerHands" instance=ExtResource("6_ivwdk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02, -0.075, 0.035)
visible = false

[node name="BodyCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_votpe")

[node name="PlayerUI" type="Node" parent="."]

[node name="Pause" type="Node" parent="PlayerUI"]

[node name="GamePauseScene" parent="PlayerUI/Pause" instance=ExtResource("2_s8mh6")]
visible = false

[node name="GameEnd" type="Node" parent="PlayerUI"]

[node name="GameOverScene" parent="PlayerUI/GameEnd" instance=ExtResource("2_n2ncv")]
visible = false

[node name="GameWonScene" parent="PlayerUI/GameEnd" instance=ExtResource("3_ilfnc")]
visible = false

[node name="GameUI" type="Node" parent="PlayerUI"]

[node name="PlayerTooltip" parent="PlayerUI/GameUI" instance=ExtResource("6_km5q6")]
position = Vector2(0, 392)

[node name="Crosshair" type="Sprite2D" parent="PlayerUI/GameUI"]
texture_filter = 1
position = Vector2(640, 360)
texture = ExtResource("6_1n2bp")

[node name="HealthLabel" type="Label" parent="PlayerUI/GameUI"]
offset_left = 64.0
offset_top = 656.0
offset_right = 160.0
offset_bottom = 704.0
theme = ExtResource("12_plvxg")
text = "100"
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="PlayerUI/GameUI"]
offset_right = 1280.0
offset_bottom = 64.0
theme = ExtResource("12_plvxg")
text = "123456789"
horizontal_alignment = 1
vertical_alignment = 1
